--- a/styles/style.css
+++ b/styles/style.css
@@ -10,3 +10,12 @@
     .inter-font {
         font-family: "Inter", sans-serif;
     }
+
+    .button-styles{
+    background-color: rgba(233, 90, 8, 1.00);
+    color: #FFFF;
+    padding: 0.75rem 0;
+    font-weight:600;
+    text-transform: uppercase;
+    cursor: pointer;
+  }
