--- a/styles/style.css
+++ b/styles/style.css
@@ -19,3 +19,26 @@
     text-transform: uppercase;
     cursor: pointer;
   }
+
+  .btn {
+      cursor: pointer;
+  }
+
+  .btn-sub {
+      cursor: pointer;
+  }
+
+  .button-styles:hover {
+      box-shadow: 0px 0px 10px rgba(0, 123, 255, 0.6);
+      transform: translateY(-5px);
+  }
+
+  .card:hover {
+      box-shadow: 0px 0px 10px rgba(0, 123, 255, 0.6);
+      transform: translateY(-5px);
+  }
+
+  .last-child:hover {
+      box-shadow: 0px 0px 10px rgba(0, 123, 255, 0.6);
+      transform: translateY(-5px);
+  }
