--- a/styles/style.css
+++ b/styles/style.css
@@ -42,3 +42,13 @@
       box-shadow: 0px 0px 10px rgba(0, 123, 255, 0.6);
       transform: translateY(-5px);
   }
+
+  .footer-list-styles {
+      padding: 8px 0;
+  }
+
+@layer components {
+    :root {
+        --color-primary: rgba(233, 90, 8, 1.00);
+    }
+}
